@@ -1514,6 +1514,13 @@ expand_simple_operations (tree expr)
   if (gimple_code (stmt) != GIMPLE_ASSIGN)
     return expr;
 
+  /* Avoid expanding to expressions that contain SSA names that need
+     to take part in abnormal coalescing.  */
+  ssa_op_iter iter;
+  FOR_EACH_SSA_TREE_OPERAND (e, stmt, iter, SSA_OP_USE)
+    if (SSA_NAME_OCCURS_IN_ABNORMAL_PHI (e))
+      return expr;
+
   e = gimple_assign_rhs1 (stmt);
   code = gimple_assign_rhs_code (stmt);
   if (get_gimple_rhs_class (code) == GIMPLE_SINGLE_RHS)
